# hiring-data-platform

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  start.sh
.github/workflows/: ci.yml  deploy.yml
app/application/: backup.py  generate_report.py  ingest_batch.py  load_historical.py  reset.py  restore.py
app/domain/: backup_codec.py  employee.py  reference.py  rejected_record.py  report.py  repositories.py  validation.py  value_objects.py
app/infrastructure/: config.py  logging_config.py
app/interface/: composition.py  ingest_constants.py
docs/: API_CONTRACT.md  BACKUP_RESTORE.md  DATA_MODEL.md  DECISIONS.md  DESIGN.md  ROADMAP.md
sql/: report_1_hires_by_quarter.sql  report_2_departments_above_average.sql
tests/: conftest.py
tests/integration/: test_admin_api.py  test_backup_restore.py  test_department_repository.py  test_employee_repository.py  test_employee_version_repository.py  test_health.py  test_historical_load_api.py  test_ingest_api.py  test_job_repository.py  test_load_repository.py  test_migrations.py  test_rejected_record_repository.py  test_report_repository.py  test_reports_api.py
tests/unit/: fakes.py  test_avro_codec.py  test_backup.py  test_backup_codec.py  test_backup_restore_ui.py  test_cli_backup.py  test_cli_restore.py  test_config.py  test_employee.py  test_generate_report.py  test_historical_load.py  test_ingest_batch.py  test_reference.py  test_rejected_record.py  test_reset.py  test_restore.py  test_validation.py  test_value_objects.py
(+25 files in other folders)
